# AiMedOrchestra

./: CONTRIBUTING.md  Dockerfile  README.md  aimed_quick_chat.py  aimedorchestra_demo_notebook.ipynb  aimedorchestraagent.py  conversational_orchestrator.py  graph.py  k8s_deployment.yaml  pyproject.toml  requirements.txt
.virtual_documents/: aimedorchestra_demo_notebook_chat.ipynb  aimedorchestra_demo_notebook_chat_gradio.ipynb  aimedorchestra_demo_notebook_chat_with_logo.ipynb  aimedorchestra_demo_notebook_chat_with_logo_title.ipynb
aimedorchestra/: agent.py
aimedorchestra.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aimedorchestra/agents/clinical_trial_matching/: agent.py
aimedorchestra/agents/data_synthesis/: agent.py
aimedorchestra/agents/diagnostics/: agent.py.bak
aimedorchestra/agents/diet_planner/: agent.py
aimedorchestra/agents/drug_discovery/: agent.py
aimedorchestra/agents/ethical_monitoring/: agent.py
aimedorchestra/agents/genomics/: agent.py.bak
aimedorchestra/orchestrator/: agent.py
apps/: clinical_trial_matching_app.py  data_synthesis_app.py  diagnostics_app.py  diet_planner_app.py  drug_discovery_app.py.bak  ethical_monitoring_app.py  genomics_app.py.bak  imaging_app.py  literature_surveillance_app.py  mental_health_app.py  orchestrator_app.py  orchestrator_chat.py  treatment_optimization_app.py
data/: sample_image.textClipping  trials.json.bak
data/literature/: cardiovascular_disease.txt  cholesterol.txt.bak  diabetes.txt  hypertension.txt  kidney_disease.txt  metabolic_syndrome.txt.bak  obesity.txt.bak  stroke.txt.bak
(+4 files in other folders)
